Revision history for CtrlO-Crypt-XkcdPassword

1.008   2020-04-30T14:34:00
    - Avoid generating negative integers (Tom Hukins)


1.007   2020-04-29T21:40:43
    - Fix pwgen-xkcd.pl when called with no arguments (Tom Hukins)


1.006	2019-08-07T19:19:20
    - Fixed pod error reported by CPANTS. (Mohammad S Anwar)


1.005   2018-04-02T21:36:04
    - improve error-tests
    - Fixed broken link in docs, reported by manwar via
      https://github.com/domm/CtrlO-Crypt-XkcdPassword/pull/2
    - Added params check for method xkcd() with unit tests.
      (Mohammad S Anwar)


1.004   2018-03-19T10:28:04
    - add author test in xt to check for bad words
    - remove a few more bad-ish words


1.003   2018-02-28T11:17:15
    - Remove words with potential to generate offensive phrases (Andy Beverley)


1.002   2018-02-19T19:21:27
    - fix copyright year (spotted by koki)
    - add link to https://www.explainxkcd.com/wiki/index.php/936:_Password_Strength (suggested by twitter.com/m_ueberall)
    - skip t/40-fork.t on MSWin32 (uncovered by CPAN testers)


1.001   2018-02-18T14:31:05
    - minor documentation improvements


1.000   2018-02-18T14:01:17
    - first release to CPAN
