@@ -1,3 +1,6 @@
+# This file is generated by Dist::Zilla::Plugin::CPANFile v6.017
+# Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
+
 requires "Carp" => "0";
 requires "Class::Accessor::Fast" => "0";
 requires "Crypt::Rijndael" => "0";
@@ -13,9 +16,6 @@ requires "Pod::Usage" => "0";
 requires "WordList" => "0";
 requires "base" => "0";
 requires "perl" => "5.010";
-requires "strict" => "0";
-requires "utf8" => "0";
-requires "warnings" => "0";
 
 on 'build' => sub {
   requires "Module::Build" => "0.28";
@@ -23,10 +23,17 @@ on 'build' => sub {
 
 on 'test' => sub {
   requires "File::Spec" => "0";
+  requires "File::Temp" => "0";
+  requires "IO::Handle" => "0";
+  requires "IPC::Open3" => "0";
   requires "Test::Exception" => "0";
   requires "Test::More" => "0";
   requires "Test::SharedFork" => "0";
   requires "lib" => "0";
+};
+
+on 'test' => sub {
+  recommends "Bad::Words" => "0.09";
 };
 
 on 'configure' => sub {
