@@ -1,37 +1,6 @@
 name    = CtrlO-Crypt-XkcdPassword
-author  = Thomas Klausner <domm@cpan.org>
-license = Perl_5
-copyright_holder = Thomas Klausner
-copyright_year   = 2018 - 2019
+copyright_year   = 2018 - 2021
 
-[GatherDir]
-exclude_match = local
-exclude_match = cpanfile*
-
-[PruneCruft]
-[ManifestSkip]
-[MetaYAML]
-[MetaJSON]
-[License]
-[ReadmeAnyFromPod]
-type = markdown
-filename = README.md
-location = root
-[ExecDir]
-[Repository]
-[AutoPrereqs]
-[MetaResources]
-[CheckChangeLog]
-[Manifest]
-[TestRelease]
-[ConfirmRelease]
-[CPANFile]
-[VersionFromModule]
-[ModuleBuild]
-[PodWeaver]
-[InstallGuide]
-[@Git]
-
-[CopyFilesFromBuild]
-copy = cpanfile
-
+[@Author::DOMM]
+[Prereqs / TestRecommends]
+Bad::Words = 0.09
