@@ -1,5 +1,10 @@
 Revision history for CtrlO-Crypt-XkcdPassword
 
+{{$NEXT}}
+    - dist housekeeping: github issues,
+      Dist::Zilla::PluginBundle::Author::DOMM
+
+
 1.008   2020-04-30T14:34:00
     - Avoid generating negative integers (Tom Hukins)
 
